# day

./: .gitignore  Cargo.toml  LICENSE  README.md  expanded.rs
.cargo/: config.toml
day_cli/: Cargo.toml  LICENSE  README.md  expanded.rs
day_cli/src/: autocomplete.rs  cli.rs  configurable.rs  event.rs  fs.rs  main.rs  state.rs  table.rs
day_cli/src/config/: cli.rs  configurator.rs  mod.rs
day_cli/src/modules/: mod.rs  sleep.rs
day_cli/src/modules/commitments/: cli.rs  mod.rs
day_cli/src/modules/sleep/: biphasic.rs  cli.rs  dymaxion.rs  everyman.rs  mod.rs  monophasic.rs  uberman.rs
day_cli/src/modules/todo/: cli.rs  configurator.rs  fmt.rs  mod.rs
day_cli/src/subcommands/: mod.rs
day_cli/src/subcommands/tree/: mod.rs
day_cloud/: Cargo.toml
day_core/: Cargo.toml  README.md
day_core/src/: cli.rs  config.rs  error.rs  event.rs  lib.rs  maybe_set.rs  state.rs  time.rs  weekly.rs
day_core/src/config/: mod.rs
day_core/src/event/: flexible.rs  inflexible.rs  mod.rs
day_core/src/modules/: mod.rs  task.rs
day_core/src/modules/commitments/: mod.rs  state.rs
day_core/src/modules/custom/: mod.rs
day_core/src/modules/sleep/: biphasic.rs  dymaxion.rs  everyman.rs  mod.rs  monophasic.rs  uberman.rs
day_core/src/modules/todos/: mod.rs
day_core/src/scheduling/: mod.rs  solver.rs
src/: cli.rs  config.rs  fs.rs  main.rs  state.rs  time.rs
src/config/: cli.rs  configurator.rs  mod.rs
src/modules/: mod.rs
src/modules/commitments/: cli.rs  mod.rs
src/modules/sleep/: biphasic.rs  cli.rs  dymaxion.rs  everyman.rs  mod.rs  monophasic.rs  uberman.rs
