[package]
name = "day"
version = "0.1.0"
edition = "2021"
description = "A comprehensive CLI time management tool"
authors = ["Varun Latthe (Var1377)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["cargo", "derive"] }
edit = "0.1.4"
