[package]
name = "day"
edition = "2021"
version = "0.1.0"
authors = ["Varun Latthe (Var1377)"]
description = "A comprehensive CLI time management tool"

[dependencies]
anyhow = "1.0.72"
custom_derive = "0.1.7"
enum_derive = "0.1.7"
human-panic = "1.1.5"
terminal_size = "0.2.6"

[dependencies.clap]
version = "4.3.17"
features = ["cargo", "derive"]
optional = false

[dependencies.comfy-table]
version = "7.0.1"
features = ["custom_styling"]
optional = false

[dependencies.indicatif]
version = "0.17.5"
features = ["improved_unicode", "unicode-segmentation"]
optional = false

[dependencies.inquire]
version = "0.6.2"
features = ["chrono", "date", "editor", "tempfile"]
optional = false

[dependencies.tabled]
version = "0.12.2"
features = ["ansi-str", "ansitok", "macros", "derive", "color"]
optional = false
default-features = false
