[package]
name = "day"
edition = "2021"
version = "0.1.0"
authors = ["Varun Latthe (Var1377)"]
description = "A comprehensive CLI time management tool"

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", default-features = false, features = ["std", "winapi"] }
dirs = "5.0.1"
human-panic = "1.1.5"
once_cell = "1.18.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
day_core = { path = "../day_core" }
extension-trait = "1.0.2"
enum-iterator = "1.4.1"
clap = { version = "4.3.17", features = ["cargo", "derive"], optional = false }
comfy-table = { version = "7.0.1", features = ["custom_styling"], optional = false }
inquire = { version = "0.6.2", features = ["chrono", "date", "editor", "tempfile"], optional = false }
ptree = "0.4.0"
cli-table = "0.4.7"
