[package]
name = "day_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["std", "winapi", "serde"] }
enum-iterator = "1.4.1"
serde = { version = "1.0.174", features = ["derive"] }
serde-inline-default = "0.1.1"
sscanf = "0.4.1"
